# Starthinker

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp2  main.h2  setup_cppfront.sh
src/: main.cpp2  types.h2
